k8s/worker.yaml

apiVersion: apps/v1

kind: Deployment

metadata:

  name: worker

  labels:

    app: worker

spec:

  replicas: 1

  selector:

    matchLabels:

      app: worker

  template:

    metadata:

      labels:

        app: worker

    spec:

      serviceAccountName: worker-sa

      containers:

        - name: worker

          image: image-registry.openshift-image-registry.svc:5000/devops-ticketing/worker:latest

          resources:

            requests:

              cpu: 100m

              memory: 128Mi

            limits:

              cpu: 500m

              memory: 512Mi
